...
"Delete" = "Delete";
"DeleteAll" = "Delete all";
"Deleting" = "Deleting...";
"DoYouReallyWantToDelete" = "Do you really want to delete? This cannot be undone.";
"Edit" = "Edit";
"EditFolder" = "Edit folder";
"Email" = "Email";
"EmailAddress" = "Email address";
"EmailUs" = "Email us";
"EmailUsDescription" = "Email us directly to get help or leave feedback.";
"EnterPIN" = "Enter your PIN code.";
"Favorites" = "Favorites";
"FileBugReport" = "File a bug report";
...
"BitwardenAutofillAccessibilityServiceDescription" = "Use the Bitwarden accessibility service to autofill your logins.";
"ChangeEmailAddress" = "Change email address";
"ChangeEmailConfirmation" = "You can change your email address on the bitwarden.com web vault. Do you want to visit the website now?";
"ChangeMasterPassword" = "Change master password";
"Close" = "Close";
"Continue" = "Continue";
"CreateAccount" = "Create account";
"CreatingAccount" = "Creating account...";
"EditItem" = "Edit item";
"EnableAutomaticSyncing" = "Allow automatic syncing";
"EnterEmailForHint" = "Enter your account email address to receive your master password hint.";
"ReactivateAppExtension" = "Reactivate app extension";
"ExtensionAlmostDone" = "Almost done!";
...
"ExpirationTime" = "Expiration time";
"Expired" = "Expired";
"MaximumAccessCount" = "Maximum access count";
"MaximumAccessCountInfo" = "If set, users will no longer be able to access this Send once the maximum access count is reached.";
"MaximumAccessCountReached" = "Max access count reached";
"CurrentAccessCount" = "Current access count";
"NewPassword" = "New password";
"PasswordInfo" = "Require this password to view the Send.";
"RemovePassword" = "Remove password";
"AreYouSureRemoveSendPassword" = "Are you sure you want to remove the password?";
"RemovingSendPassword" = "Removing password";
"SendPasswordRemoved" = "Password removed";
"NoSends" = "There are no Sends in your account.";
...
